push from local

--- a/1_esp_web_server/index.html
+++ b/1_esp_web_server/index.html
@@ -13,7 +13,7 @@
       padding: 0;
     }
     .header {
-      background-color: #111;
+      background-color: #323232;
       color: white;
       padding: 18px;
       text-align: center;
@@ -83,7 +83,8 @@
   </style>
 </head>
 <body>
-  <div class="header">Simple Monitor</div>
+  <div class="header">ESP32 Test</div>
+
   <div class="container">
     <div class="data-block">
       <div class="label">Temperature</div>
